syntax = "proto3";

option go_package = "./pb";

package pb;

// 模拟订单详细信息
message OrderInfo {
  string productName=1;
  int32 productNumber=2;
  int32 payMethod=3;
  int32 deliveryMethod=4;
  string expectedDeliveryTime=5;
}

// 订单创建请求
message CreateOrderReq {
  string orderCreatorID=1; // 订单创建者
  OrderInfo orderInfo=2; // 订单的详细信息，供后端进行存库
}

// 订单额外信息，由服务端返回的
message OrderAdditionalInfo{
  int64 createTimestamp=1; // 订单创建的时间
}

// 订单创建响应
message CreateOrderResp {
  string orderID=1; // 订单的ID,由后端生成
  OrderAdditionalInfo orderAdditionalInfo=2;
}

// 订单查询请求
message QueryOrderReq {
  string orderID=1;
}

// 订单查询响应
message QueryOrderResp {
  string orderID=1; // 订单ID
  OrderInfo orderInfo=2; // 请求发起者创建时订单时上传给请求处理者关于此次交易的信息
  OrderAdditionalInfo orderAdditionalInfo=3; // 订单的额外信息，创建订单时请求处理者关于该订单生成时附带生成的额外信息
}


service OrderRPCService {
  rpc createOrder(CreateOrderReq) returns(CreateOrderResp);
  rpc queryOrder(QueryOrderReq) returns(QueryOrderResp);
}